# motion_detection

./: .cproject  .gitignore  .project  .test.swp  CMakeLists.txt  detection.cu
src/: detection.cu  gcloud.cpp  mask.cpp  motion.cpp
supervisor/: motion_detection.ini  supervisor_setup.sh  supervisord  supervisord.conf
